# kursovaya4

./: README.md  pyproject.toml  setting.py
src/: Vacancy_class.py  database.py  get_class.py  hh.json  main.py  sj.json  test.py  utils.py  vacancy_class.py
